[package]
name = "rclip"
version = "0.1.0"
authors = ["UnkwUsr <ktoto2707043@gmail.com>"]
edition = "2018"


[dependencies]
clap = "2.33.3"
signal-hook = "0.3.9"
dirs = "3.0.2"
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5.8"

[dependencies.xcb]
version = "0.9.0"
features = ["xfixes"]

