[package]
name = "rclipd"
version = "0.1.1"
authors = ["UnkwUsr <ktoto2707043@gmail.com>"]
description = """
Rclip is a clipboard manager with ability to save different entry types (text,
images, etc.). It's just a daemon which look for clipboard updates and save
them each per unique file.
"""
repository = "https://github.com/UnkwUsr/rclip"
keywords = ["clipboard", "daemon", "history", "manager", "fzf"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"


[dependencies]
clap = "2.33.3"
signal-hook = "0.3.9"
dirs = "3.0.2"
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5.8"

[dependencies.xcb]
version = "0.9.0"
features = ["xfixes"]

